fix: small issue with zoom buttons being placed behind scopes

--- a/styles/VisualView.css
+++ b/styles/VisualView.css
@@ -4,7 +4,7 @@
   right: 0;
   display: flex;
   flex-direction: column;
-  z-index: 1;
+  z-index: 3;
   padding: 4px;
 }
 
@@ -43,7 +43,6 @@
 
 
 .sketch-visual-reset-button {
-  background-color: #f5e8df;
   border: 2px solid #062746;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
   font-size: 16px;
@@ -53,10 +52,10 @@
   margin: 1px;
   background: url("../assets/images/sketch-reset.svg") no-repeat center;
   background-size: 20px 20px;
+  background-color: #f5e8df;
 }
 
 .dark-visual-reset-button {
-  background-color: #212529;
   border: 2px solid #f5e8df;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
   font-size: 16px;
@@ -66,6 +65,7 @@
   margin: 1px;
   background: url("../assets/images/dark-reset.svg") no-repeat center;
   background-size: 20px 20px;
+  background-color: #212529;
 }
 
 .sketch-visual-reset-button:hover {
